update font, add img-responsive class

--- a/assets/style.less
+++ b/assets/style.less
@@ -61,7 +61,7 @@
 @font-family-serif : Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace : Menlo, Monaco, Consolas, "Courier New", monospace;
-@font-family-base : PT Mono;
+@font-family-base : Source Code Pro;
 
 @font-size-base : 16px;
 @font-size-large : ceil((@font-size-base * 1.25)); // ~18px
@@ -80,7 +80,7 @@
 @line-height-computed : floor((@font-size-base * @line-height-base)); // ~20px
 
 //** By default, this inherits from the `<body>`.
-@headings-font-family : PT Mono;
+@headings-font-family : Source Code Pro;
 @headings-font-weight : 500;
 @headings-line-height : 1.1;
 @headings-color : inherit;
