--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=PT Mono|PT Mono");
+@import url("https://fonts.googleapis.com/css?family=Source Code Pro|Source Code Pro");
 /*!
  * Default theme for Pingendo 
  * Homepage: http://pingendo.com  
@@ -1074,7 +1074,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: PT Mono;
+  font-family: Source Code Pro;
   font-size: 16px;
   line-height: 1.42857143;
   color: #a52e3c;
@@ -1173,7 +1173,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: PT Mono;
+  font-family: Source Code Pro;
   font-weight: 500;
   line-height: 1.1;
   color: inherit;
@@ -5806,7 +5806,7 @@ button.close {
   z-index: 1070;
   display: block;
   visibility: visible;
-  font-family: PT Mono;
+  font-family: Source Code Pro;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.4;
@@ -5913,7 +5913,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: PT Mono;
+  font-family: Source Code Pro;
   font-size: 16px;
   font-weight: normal;
   line-height: 1.42857143;
