--- a/assets/style.less
+++ b/assets/style.less
@@ -41,7 +41,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg : transparent;
+@body-bg : white;
 //** Global text color on `<body>`.
 @text-color : #a52e3c;
 
@@ -352,7 +352,7 @@
 @container-md : @container-desktop;
 
 // Large screen / wide desktop
-@container-large-desktop : (1140px + @grid-gutter-width);
+@container-large-desktop : @container-desktop;
 //** For `@screen-lg-min` and up.
 @container-lg : @container-large-desktop;
 
