--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,18 @@
  * }
 */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+
+
+.lead > a {
+    font-family: Source Code Pro;
+    font-size: 18px;
+    line-height: 1.42857;
+    color: #A52E3C !important;
+    font-weight: 600;
+    text-align: center;
+}
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
