--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -6717,7 +6717,7 @@ body {
   top: 0px;
   width: 100%;
   border: none;
-  background-color: transparent !important;
+  z-index: 50;
 }
 .cover .navbar .navbar-nav li.active a {
   background-color: transparent !important;
