sync fade in times

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -44,14 +44,14 @@
   background: rgba(165, 46, 60, 1) url(../images/cd-top-arrow.svg) no-repeat center 50%;
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: opacity .3s 0s, visibility 0s .3s;
-  -moz-transition: opacity .3s 0s, visibility 0s .3s;
-  transition: opacity .3s 0s, visibility 0s .3s;
+  -webkit-transition: opacity 2s 0s, visibility 0s 2s;
+  -moz-transition: opacity 2s 0s, visibility 0s 2s;
+  transition: opacity 2s 0s, visibility 0s 2s;
 }
 .cd-top.cd-is-visible, .cd-top.cd-fade-out, .no-touch .cd-top:hover {
-  -webkit-transition: opacity .3s 0s, visibility 0s 0s;
-  -moz-transition: opacity .3s 0s, visibility 0s 0s;
-  transition: opacity .3s 0s, visibility 0s 0s;
+  -webkit-transition: opacity 2s 0s, visibility 0s 0s;
+  -moz-transition: opacity 2s 0s, visibility 0s 0s;
+  transition: opacity 2s 0s, visibility 0s 0s;
 }
 .cd-top.cd-is-visible {
   /* the button becomes visible */
