--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -41,7 +41,7 @@
   overflow: hidden;
   text-indent: 100%;
   white-space: nowrap;
-  background: rgba(165, 46, 60, 1) url(../images/cd-top-arrow.svg) no-repeat center 50%;
+  background: rgba(55, 55, 55, .8) url(../images/cd-top-arrow.svg) no-repeat center 50%;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: opacity 2s 0s, visibility 0s 2s;
